# DynamicRL

./: .gitignore  README.md  debug_runner.py  main.py  ppo.py  pyproject.toml  simpleMain.py
configs/: config.yaml  ppo_humanoid.yaml
configs/algorithm/: ppo.yaml
configs/test/: integration.yaml
dynamic_rl/: config_manager.py
dynamicrl/algorithms/ppo/: ppo_algorithm.py
dynamicrl/core/: advantage.py  algorithm.py  checkpoint.py  control.py  data_buffer.py  events.py  logger.py  logging.py  policies.py  trainer.py  types.py  utils.py
dynamicrl/envs/vec/: sync_vec.py
randomTests/: config_manager.py  demo.py
scripts/: train_ppo.py
tests/: loggerTest.py  metrics.csv  test_events.py  test_trainer_integration.py
tests/_test_outputs/: metrics.csv
tests/_test_outputs/checkpoints/: checkpoint_step_200.pth  checkpoint_step_300.pth
tests/checkpoints/: checkpoint_final.pth  checkpoint_step_2048.pth  checkpoint_step_4096.pth
tests/outputs/2025-08-19/06-23-19/.hydra/: hydra.yaml
tests/outputs/2025-08-19/06-25-13/.hydra/: hydra.yaml
tests/outputs/2025-08-19/06-26-59/.hydra/: config.yaml  hydra.yaml
tests/outputs/2025-08-19/06-30-06/.hydra/: hydra.yaml
tests/outputs/2025-08-19/06-31-12/.hydra/: hydra.yaml
tests/outputs/2025-08-19/06-38-07/.hydra/: config.yaml  hydra.yaml
tests/outputs/2025-08-19/06-39-29/.hydra/: config.yaml  hydra.yaml
tests/outputs/2025-08-19/06-40-51/.hydra/: hydra.yaml
tests/outputs/2025-08-19/06-42-57/.hydra/: config.yaml  hydra.yaml
tests/outputs/2025-08-19/06-43-43/.hydra/: hydra.yaml
tests/outputs/2025-08-19/06-45-57/.hydra/: hydra.yaml
tests/outputs/2025-08-19/06-46-15/.hydra/: hydra.yaml
tests/outputs/2025-08-19/06-47-51/.hydra/: hydra.yaml
tests/outputs/2025-08-19/06-50-21/.hydra/: hydra.yaml
tests/outputs/2025-08-19/06-51-13/.hydra/: hydra.yaml
tests/outputs/2025-08-19/06-54-21/.hydra/: hydra.yaml
tests/outputs/2025-08-19/06-57-29/.hydra/: hydra.yaml
tests/outputs/2025-08-19/07-00-22/.hydra/: hydra.yaml
tests/outputs/2025-08-19/07-01-20/.hydra/: config.yaml  hydra.yaml
tests/outputs/2025-08-19/07-01-28/.hydra/: hydra.yaml
(+18 files in other folders)
